--- a/www/app/views/main.scala.html
+++ b/www/app/views/main.scala.html
@@ -31,6 +31,7 @@
             <li><a@if(data.section == Some(com.bryzek.dependency.lib.Section.Libraries)) { class="active" } href="@routes.LibrariesController.index()">Libraries</a></li>
             <li><a@if(data.section == Some(com.bryzek.dependency.lib.Section.Binaries)) { class="active" } href="@routes.BinariesController.index()">Binaries</a></li>
             <li><a@if(data.section == Some(com.bryzek.dependency.lib.Section.Resolvers)) { class="active" } href="@routes.ResolversController.index()">Resolvers</a></li>
+            <li><a@if(data.section == Some(com.bryzek.dependency.lib.Section.Subscriptions)) { class="active" } href="@routes.SubscriptionsController.index()">Subscriptions</a></li>
           </ul>
         </div>
 
