--- a/api/app/views/emails/dailySummary.scala.html
+++ b/api/app/views/emails/dailySummary.scala.html
@@ -35,7 +35,7 @@
   </thead>
   @recommendations.map { rec =>
     <tr>
-      <td>@com.bryzek.dependency.lib.DateHelper.shortDate(rec.audit.createdAt)</td>
+      <td>@rec.audit.createdAt</td>
       <td><a href="@routes.ProjectsController.show(rec.project.guid)">@{rec.project.name}</a></td>
       <td><a href="@com.bryzek.dependency.lib.Config.recommendationUrl(rec)">@com.bryzek.dependency.lib.Text.truncate(rec.name, 50)</a></td>
       <td>@rec.from</td>
