--- a/www/app/views/binaries/show.scala.html
+++ b/www/app/views/binaries/show.scala.html
@@ -1,5 +1,5 @@
 @(
-  data: com.bryzek.dependency.lib.UiData,
+  data: com.bryzek.dependency.www.lib.UiData,
   binary: com.bryzek.dependency.v0.models.Binary,
   versions: io.flow.play.util.PaginatedCollection[com.bryzek.dependency.v0.models.BinaryVersion],
   projectBinaryVersions: io.flow.play.util.PaginatedCollection[com.bryzek.dependency.v0.models.ProjectBinaryVersion]
