--- a/www/app/views/resolvers/create.scala.html
+++ b/www/app/views/resolvers/create.scala.html
@@ -1,5 +1,5 @@
 @(
-  data: com.bryzek.dependency.lib.UiData,
+  data: com.bryzek.dependency.www.lib.UiData,
   form: Form[controllers.ResolversController.UiForm],
   errorMessages: Seq[String] = Nil
 )(implicit flash: Flash, messages: Messages)
