--- a/www/app/views/subscriptions/index.scala.html
+++ b/www/app/views/subscriptions/index.scala.html
@@ -1,5 +1,5 @@
 @(
-  data: com.bryzek.dependency.lib.UiData,
+  data: com.bryzek.dependency.www.lib.UiData,
   userPublications: Seq[controllers.Subscriptions.UserPublication]
 )(implicit flash: Flash, messages: Messages)
 
