--- a/www/app/views/audit.scala.html
+++ b/www/app/views/audit.scala.html
@@ -2,11 +2,11 @@
   audit: io.flow.common.v0.models.Audit
 )
 
-Created on @com.bryzek.dependency.lib.DateHelper.longDateTime(audit.createdAt).
+Created on @com.bryzek.dependency.www.lib.DateHelper.longDateTime(audit.createdAt).
 @if(audit.createdAt == audit.updatedAt) {
   No updates since.
 } else {
-  Last updated @com.bryzek.dependency.lib.DateHelper.longDateTime(audit.updatedAt).
+  Last updated @com.bryzek.dependency.www.lib.DateHelper.longDateTime(audit.updatedAt).
 }
 
 
