--- a/www/app/views/binaries/index.scala.html
+++ b/www/app/views/binaries/index.scala.html
@@ -1,5 +1,5 @@
 @(
-  data: com.bryzek.dependency.lib.UiData,
+  data: com.bryzek.dependency.www.lib.UiData,
   binaries: io.flow.play.util.PaginatedCollection[com.bryzek.dependency.v0.models.Binary]
 )(implicit flash: Flash, messages: Messages)
 
