--- a/www/app/views/index.scala.html
+++ b/www/app/views/index.scala.html
@@ -1,5 +1,5 @@
 @(
-  data: com.bryzek.dependency.lib.UiData,
+  data: com.bryzek.dependency.www.lib.UiData,
   recommendations: io.flow.play.util.PaginatedCollection[com.bryzek.dependency.v0.models.Recommendation]
 )(implicit flash: Flash, messages: Messages)
 
@@ -30,9 +30,9 @@
 	</thead>
         @recommendations.items.map { rec =>
           <tr>
-            <td>@com.bryzek.dependency.lib.DateHelper.shortDate(rec.audit.createdAt)</td>
+            <td>@com.bryzek.dependency.www.lib.DateHelper.shortDate(rec.audit.createdAt)</td>
             <td><a href="@routes.ProjectsController.show(rec.project.guid)">@{rec.project.name}</a></td>
-            <td><a href="@com.bryzek.dependency.lib.Config.recommendationUrl(rec)">@com.bryzek.dependency.lib.Text.truncate(rec.name, 50)</a></td>
+            <td><a href="@com.bryzek.dependency.www.lib.Config.recommendationUrl(rec)">@com.bryzek.dependency.www.lib.Text.truncate(rec.name, 50)</a></td>
             <td>@rec.from</td>
             <td>@rec.to</td>
           </tr>
