--- a/www/app/views/libraries/show.scala.html
+++ b/www/app/views/libraries/show.scala.html
@@ -1,5 +1,5 @@
 @(
-  data: com.bryzek.dependency.lib.UiData,
+  data: com.bryzek.dependency.www.lib.UiData,
   library: com.bryzek.dependency.v0.models.Library,
   versions: io.flow.play.util.PaginatedCollection[com.bryzek.dependency.v0.models.LibraryVersion],
   projectLibraryVersions: io.flow.play.util.PaginatedCollection[com.bryzek.dependency.v0.models.ProjectLibraryVersion]
