--- a/www/app/views/mainNavbar.scala.html
+++ b/www/app/views/mainNavbar.scala.html
@@ -1,4 +1,4 @@
-@(data: com.bryzek.dependency.lib.UiData)
+@(data: com.bryzek.dependency.www.lib.UiData)
 
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container">
