--- a/www/app/views/projects/edit.scala.html
+++ b/www/app/views/projects/edit.scala.html
@@ -1,5 +1,5 @@
 @(
-  data: com.bryzek.dependency.lib.UiData,
+  data: com.bryzek.dependency.www.lib.UiData,
   project: com.bryzek.dependency.v0.models.Project,
   form: Form[controllers.ProjectsController.UiForm],
   errorMessages: Seq[String] = Nil
