--- a/www/app/views/projects/github.scala.html
+++ b/www/app/views/projects/github.scala.html
@@ -1,5 +1,5 @@
 @(
-  data: com.bryzek.dependency.lib.UiData,
+  data: com.bryzek.dependency.www.lib.UiData,
   repositories: io.flow.play.util.PaginatedCollection[com.bryzek.dependency.v0.models.Repository],
   errorMessages: Seq[String] = Nil
 )(implicit flash: Flash, messages: Messages)
