--- a/api/app/views/emails/dailySummary.scala.html
+++ b/api/app/views/emails/dailySummary.scala.html
@@ -1,5 +1,5 @@
 @(person: com.bryzek.dependency.api.lib.Person,
-  urls: com.bryzek.dependency.actors.EmailActor.Urls,
+  urls: com.bryzek.dependency.api.lib.Urls,
   recommendations: Seq[com.bryzek.dependency.v0.models.Recommendation],
   lastEmail: Option[db.LastEmail]
 )
@@ -13,7 +13,7 @@
 
     Thanks for subscribing to your personalized daily summary of
     dependency recommendations. At any time, you can unsubscribe
-    by visiting <a href="@urls.wwwHost@routes.SubscriptionsController.index()">@urls.wwwHost@routes.SubscriptionsController.index()</a>
+    by visiting <a href="@urls.www(routes.SubscriptionsController.index())">@urls.wwwHost@routes.SubscriptionsController.index()</a>
 
   </p>
 
@@ -36,8 +36,8 @@
   @recommendations.map { rec =>
     <tr>
       <td>@io.flow.play.util.DateHelper.shortDate(rec.audit.createdAt)</td>
-      <td><a href="@urls.wwwHost@routes.ProjectsController.show(rec.project.guid)">@com.bryzek.dependency.lib.Text.truncate(rec.project.name, 50)</a></td>
-      <td><a href="@urls.wwwHost@com.bryzek.dependency.lib.Urls.recommendationUrl(rec)">@com.bryzek.dependency.lib.Text.truncate(rec.name, 50)</a></td>
+      <td><a href="@urls.www(routes.ProjectsController.show(rec.project.guid))">@com.bryzek.dependency.lib.Text.truncate(rec.project.name, 50)</a></td>
+      <td><a href="@urls.www(com.bryzek.dependency.lib.Urls.recommendationUrl(rec))">@com.bryzek.dependency.lib.Text.truncate(rec.name, 50)</a></td>
       <td>@rec.from</td>
       <td>@rec.to</td>
     </tr>
