--- a/api/app/views/emails/footer.scala.html
+++ b/api/app/views/emails/footer.scala.html
@@ -1,4 +1,4 @@
-@(urls: com.bryzek.dependency.actors.EmailActor.Urls)
+@(urls: com.bryzek.dependency.api.lib.Urls)
 
 <hr size="1">
-<a href="@urls.wwwHost@routes.SubscriptionsController.index()">Manage your subscriptions</a>
+<a href="@urls.www(routes.SubscriptionsController.index())">Manage your subscriptions</a>
