--- a/api/app/views/emails/footer.scala.html
+++ b/api/app/views/emails/footer.scala.html
@@ -1,4 +1,13 @@
 @(urls: com.bryzek.dependency.api.lib.Urls)
 
 <hr size="1">
-<a href="@urls.www(routes.SubscriptionsController.index())">Manage your subscriptions</a>
+
+<p>
+  <em>
+    We love open source software and hope you find this project helpful. We welcome feedback, suggestions, bugs, and contributions. Please visit us at <a href="@urls.github">Github</a>
+  </em>
+</p>
+
+<p>
+  <a href="@urls.www(routes.SubscriptionsController.index())">Manage your subscriptions</a>
+</p>
