--- a/api/app/views/emails/footer.scala.html
+++ b/api/app/views/emails/footer.scala.html
@@ -1,4 +1,4 @@
-@(urls: com.bryzek.dependency.api.lib.Urls)
+@(urls: com.bryzek.dependency.lib.Urls)
 
 <hr size="1">
 
@@ -9,5 +9,5 @@
 </p>
 
 <p>
-  <a href="@urls.www(routes.SubscriptionsController.index())">Manage your subscriptions</a>
+  <a href="@urls.www(urls.subscriptions)">Manage your subscriptions</a>
 </p>
