--- a/api/app/views/emails/recommendations.scala.html
+++ b/api/app/views/emails/recommendations.scala.html
@@ -1,4 +1,4 @@
-@(urls: com.bryzek.dependency.api.lib.Urls,
+@(urls: com.bryzek.dependency.lib.Urls,
   recommendations: Seq[com.bryzek.dependency.v0.models.Recommendation]
 )
 
@@ -11,12 +11,12 @@
       <tr>
         <td>
 	  @if(j == 0) {
-	    <a href="@urls.www(routes.ProjectsController.show(project.guid))">@com.bryzek.dependency.lib.Text.truncate(project.name, 50)</a>
+	    <a href="@urls.www(urls.project(project.guid))">@com.bryzek.dependency.lib.Text.truncate(project.name, 50)</a>
 	  } else {
   	    &nbsp;
 	  }
 	</td>
-        <td><a href="@urls.www(com.bryzek.dependency.lib.Urls.recommendationUrl(rec))">@com.bryzek.dependency.lib.Text.truncate(rec.name, 50)</a></td>
+        <td><a href="@urls.www(urls.recommendation(rec))">@com.bryzek.dependency.lib.Text.truncate(rec.name, 50)</a></td>
         <td>@rec.from</td>
         <td>=&gt;</td>
         <td>@rec.to</td>
