--- a/www/app/views/index.scala.html
+++ b/www/app/views/index.scala.html
@@ -32,7 +32,7 @@
           <tr>
             <td>@io.flow.play.util.DateHelper.shortDate(rec.audit.createdAt)</td>
             <td><a href="@routes.ProjectsController.show(rec.project.guid)">@{rec.project.name}</a></td>
-            <td><a href="@com.bryzek.dependency.lib.Urls.recommendation(rec)">@com.bryzek.dependency.lib.Text.truncate(rec.name, 50)</a></td>
+            <td><a href="@data.urls.recommendation(rec)">@com.bryzek.dependency.lib.Text.truncate(rec.name, 50)</a></td>
             <td>@rec.from</td>
             <td>@rec.to</td>
           </tr>
