--- a/www/app/views/projects/edit.scala.html
+++ b/www/app/views/projects/edit.scala.html
@@ -2,6 +2,7 @@
   data: com.bryzek.dependency.www.lib.UiData,
   project: com.bryzek.dependency.v0.models.Project,
   form: Form[controllers.ProjectsController.UiForm],
+  orgs: Seq[com.bryzek.dependency.v0.models.Organization],
   errorMessages: Seq[String] = Nil
 )(implicit flash: Flash, messages: Messages)
 
@@ -11,7 +12,7 @@
 
     @helper.form(action = routes.ProjectsController.postEdit(project.guid)) {
 
-      @projectForm(form, routes.ProjectsController.show(project.guid))
+      @projectForm(form, orgs, routes.ProjectsController.show(project.guid))
 
     }
 
