Resolve lastEmail before it is set

--- a/api/app/views/emails/dailySummary.scala.html
+++ b/api/app/views/emails/dailySummary.scala.html
@@ -12,9 +12,9 @@
 @if(lastEmail.isEmpty) {
   <p>
 
-    Thanks for subscribing to your personalized daily summary of
-    dependency recommendations. At any time, you can unsubscribe
-    by visiting <a href="@urls.www(urls.subscriptions)">@urls.www(urls.subscriptions)</a>
+    This is your personalized daily summary of dependency
+    recommendations. At any time, you can unsubscribe by
+    visiting <a href="@urls.www(urls.subscriptions)">@urls.www(urls.subscriptions)</a>
 
   </p>
 
