--- a/www/app/views/libraries/show.scala.html
+++ b/www/app/views/libraries/show.scala.html
@@ -10,12 +10,7 @@
   <ul>
     <li>Group ID: <a href="@routes.SearchController.index(q = Some(library.groupId))">@library.groupId</a></li>
     <li>Artifact ID: <a href="@routes.SearchController.index(q = Some(library.artifactId))">@library.artifactId</a></li>
-    <li>Resolver:
-      @if(library.resolver.isEmpty) {
-        <em>N/A</em>
-      } else {
-        <a href="@routes.ResolversController.show(library.resolver.get.guid)">@library.resolver.get.uri</a>
-      }
+    <li>Resolver: <a href="@routes.ResolversController.show(library.resolver.guid)">@library.resolver.uri</a></li>
     </li>
     <li>@audit(library.audit)</li>
   </ul>
