Redirect immediately once we are done processing libs/binaries

--- a/www/app/views/projects/sync.scala.html
+++ b/www/app/views/projects/sync.scala.html
@@ -1,14 +1,15 @@
 @(
   data: com.bryzek.dependency.www.lib.UiData,
   guid: java.util.UUID,
-  n: Int,
+  nextN: Int,
+  sleepTime: Int,
   syncStarted: Option[com.bryzek.dependency.v0.models.Sync],
   pending: Seq[String],
   completed: Seq[String]
 )(implicit flash: Flash, messages: Messages)
 
 @main(data.copy(title = Some("Please wait while we sync your project"))) {
-  <meta http-equiv="refresh" content="@n; url=@routes.ProjectsController.sync(guid, (n * 1.1).toInt)" />
+  <meta http-equiv="refresh" content="@sleepTime; url=@routes.ProjectsController.sync(guid, nextN.toInt)" />
 
   @if(syncStarted.isEmpty) {
     <em>Waiting for project to sync.</em>
@@ -19,15 +20,23 @@
       Waiting for sync to complete.
     </em>
 
-    @if(!pending.isEmpty) {
-      <p><b>Pending:</b><p>
-      @syncTable(pending)
-    }
+    <div class="table-responsive">
+      <table class="table">
+      @pending.map { description =>
+        <tr>
+          <td>pending</td>
+          <td>@description</td>
+        </tr>
+      }
+      @completed.map { description =>
+        <tr>
+          <td>completed</td>
+          <td>@description</td>
+        </tr>
+      }
 
-    @if(!completed.isEmpty) {
-      <p><b>Completed:</b><p>
-      @syncTable(completed)
-    }
+      </table>
+    </div>
   }
     
 }
